# taiwan-geodoc-hub-pdf-text-ripper

./: .env.example  .env.test.example  Makefile  firebase.json  pyproject.toml
functions/: .env.test.example  main.py  requirements.txt
functions/taiwan_geodoc_hub/: lifespan.py
functions/taiwan_geodoc_hub/infrastructure/: lifespan.py  starlette.py
functions/taiwan_geodoc_hub/infrastructure/auth/: user_adapter.py
functions/taiwan_geodoc_hub/infrastructure/firestore/: ocr_result_adapter.py  registration_adapter.py  role_adapter.py  snapshot_adapter.py  tenant_adapter.py
functions/taiwan_geodoc_hub/infrastructure/hashers/: bytes_hasher_adapter.py
functions/taiwan_geodoc_hub/infrastructure/http/: ocr_space.py
functions/taiwan_geodoc_hub/modules/access_managing/application/: resolve_role.py  resolve_tenant.py  resolve_user.py
functions/taiwan_geodoc_hub/modules/access_managing/constants/: roots.py
functions/tests/: conftest.py
functions/tests/e2e/: test_registration_managing.py  test_system_maintaining.py
functions/tests/integration/: test_ocr_space.py  test_role_dao.py  test_tenant_dao.py  test_user_dao.py
functions/tests/unit/: test_bytes_hasher.py  test_environments_helper.py
src/: main.py
src/taiwan_geodoc_hub/infrastructure/: lifespan.py
src/taiwan_geodoc_hub/infrastructure/constants/: collections.py
tests/: conftest.py
tests/e2e/: test_registration_managing.py  test_system_maintaining.py
tests/integration/: test_ocr_space.py  test_role_dao.py  test_tenant_dao.py  test_user_dao.py
tests/unit/: test_bytes_hasher.py
(+64 files in other folders)
